deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-webpay-svc
spec:
  selector:
    app: backend-webpay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
