deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-webpay-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec: 
  rules:
  - host: backend-webpay.tssw.cl
    http:
      paths:
      - backend:
          service:
            name: backend-webpay-svc
            port:
              number: 80
        pathType: Prefix
        path: /
  tls:
  - hosts:
    - backend-webpay.tssw.cl
    secretName: backend-webpay-ingress-secret
